feat: VP-40, Develop HMCTS Case URN Mapping service; (#48)
- introducing real /test/id endpoint to check service connectivity;
- using repository secrets;
