# src/main/java/uk/gov/hmcts/cp/controllers/CaseUrnMapperController.java
@@ -22,17 +22,32 @@ public class CaseUrnMapperController implements CaseIdByCaseUrnApi {
     private final CaseUrnMapperService caseUrnMapperService;
 
     @Override
-    public ResponseEntity<CaseMapperResponse> getCaseIdByCaseUrn(final String caseUrn) {
-        return getTest(caseUrn, true);
+    public ResponseEntity<CaseMapperResponse> getCaseIdByCaseUrn(final String caseUrn, final Boolean refresh) {
+        return getCaseIdByCaseUrnMapper(caseUrn, refresh);
     }
 
     @Override
-    public ResponseEntity<CaseMapperResponse> getCaseIdByCaseUrnMapper(String caseUrn) {
-        return getTest(caseUrn, true);
+    public ResponseEntity<CaseMapperResponse> getCaseIdByCaseUrn1(String caseUrn, Boolean refresh) {
+        return getCaseIdByCaseUrnMapper(caseUrn, refresh);
     }
 
     @Override
-    public ResponseEntity<CaseMapperResponse> getTest(final String caseUrn, final Boolean refresh) {
+    public ResponseEntity<CaseMapperResponse> getCaseIdByCaseUrn12(String caseUrn, Boolean refresh) {
+        return getCaseIdByCaseUrnMapper(caseUrn, refresh);
+    }
+
+    @Override
+    public ResponseEntity<CaseMapperResponse> getCaseIdByCaseUrn123(String caseUrn, Boolean refresh) {
+        return getCaseIdByCaseUrnMapper(caseUrn, refresh);
+    }
+
+    @Override
+    public ResponseEntity<CaseMapperResponse> getCaseIdByCaseUrn1234(String caseUrn, Boolean refresh) {
+        return getCaseIdByCaseUrnMapper(caseUrn, refresh);
+    }
+
+    @Override
+    public ResponseEntity<CaseMapperResponse> getCaseIdByCaseUrnMapper(final String caseUrn, final Boolean refresh) {
         try {
             final String sanitizedCaseUrn = sanitizeCaseUrn(caseUrn);
             final CaseMapperResponse caseMapperResponse = caseUrnMapperService.getCaseIdByCaseUrn(sanitizedCaseUrn, false);
